--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -144,7 +144,7 @@
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h2>List of Departments</h2>
         <div class="button-wrapper">
-            <button id="generatePDF" style="background-color: black;">Export Table to PDF</button>
+            <button id="generatePDF" style="background-color: black;">Download PDF</button>
         </div>
     </div>
 
@@ -280,7 +280,7 @@ document.addEventListener("DOMContentLoaded", function () {
             format: "a4"
         });
 
-        const margin = 40;
+        const margin = 20;
         const pageWidth = doc.internal.pageSize.getWidth();
 
         // ===== Title =====
