--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -221,7 +221,7 @@
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h2>List of Staff</h2>
         <div class="button-wrapper">
-            <button id="generatePDF" style="background-color: black;">Export Table to PDF</button>
+            <button id="generatePDF" style="background-color: black;">Download PDF</button>
         </div>
     </div>
 
