--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -97,7 +97,7 @@
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h2>List of Venue</h2>
         <div class="button-wrapper">
-            <button id="generatePDF" style="background-color: black;">Export Table to PDF</button>
+            <button id="generatePDF" style="background-color: black;">Download PDF</button>
         </div>
     </div>
     <table class="user-data-table"> 
